feat: update frontend

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -8,6 +8,7 @@
   --hover-color: #f3f3f3;
   --bar-color: rgba(0, 0, 0, 0.1);
   --theme-color: var(--gray);
+  --sidebar-title: rgb(48, 48, 48);
 
   /* shadow */
   --shadow: 50px 50px 100px 10px rgb(0, 0, 0, 0.1);
@@ -31,6 +32,7 @@
   --border-in-light: 1px solid rgba(255, 255, 255, 0.192);
 
   --theme-color: var(--gray);
+  --sidebar-title: darkseagreen;
 }
 
 .light {
