--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -469,3 +469,23 @@
   height: 100%;
   width: 100%;
 }
+
+.ai-write {
+  font-weight: 700;
+  cursor: pointer;
+  animation: heartbeat 2s linear 1s infinite;
+}
+
+@keyframes heartbeat {
+  0% {
+    transform: scale(1)
+  }
+
+  50% {
+    transform: scale(1.05)
+  }
+
+  100% {
+    transform: scale(1)
+  }
+}
